--- a/views/signin.erb
+++ b/views/signin.erb
@@ -1,14 +1,26 @@
-<form action="/login" method="post">
-  <div>
-    <label for="username">Username:</label>
-    <input id="username" type="text" name="username"></input>
+<h2 class="text-center">Log In</h2>
+<div class="row">
+  <div class="col-md-10">
+    <form action="/login" method="post">
+      <div class='form-group'>
+        <div class="control-label col-md-3">
+          <label for="username">Username:</label>
+          <input id="username" type="text" name="username"></input>
+        </div>
+      </div>
+      <div class="form">
+        <div class="control-label col-md-3">
+          <label for="password">Password:</label>
+          <input id="password" type="password" name="password"></input>
+        </div>
+      </div>
+    
+      <div class="form-group">
+        <div class="control-label col-md-3">
+          <input type="submit" value="Login"></input>
+          <input type="reset" value="Clear"></input>
+        </div>
+      </div>
+    </form>
   </div>
-  <div>
-    <label for="password">Password:</label>
-    <input id="password" type="password" name="password"></input>
-  </div>
-  <div>
-    <input type="submit" value="Login"></input>
-    <input type="reset" value="Clear"></input>
-  </div>
-</form>
+</div>
