--- a/views/signup.erb
+++ b/views/signup.erb
@@ -1,19 +1,28 @@
-<p>Enter the username and password!</p>
-<form action="/signup" method="post">
-  <div>
-    <label for="username">Username:</label>
-    <input id="username" type="text" name="username"></input>
+<h2 class="text-center">Sign Up</h2>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <form action="/signup" method="post">
+      <div class="form-group">
+        <label for="username">Username:</label>
+        <input id="username" type="text" name="username" class="form-control">
+        </input>
+      </div>
+      <div class="form-group">
+        <label for="password">Password:</label>
+        <input id="password" type="password" name="password" class="form-control">
+        </input>
+      </div>
+      <div class="form-group">
+        <label for="checkpassword">Password:</label>
+        <input id="password" type="password" name="checkpassword" 
+          class="form-control"></input>
+      </div>
+      <div class="form-group">
+        <input type="submit" value="Sign Up" class="btn btn-info"></input>
+        <input type="reset" value="Clear" class="btn btn-info"></input>
+      </div>
+    </form>
   </div>
-  <div>
-    <label for="password">Password:</label>
-    <input id="password" type="password" name="password"></input>
-  </div>
-  <div>
-    <label for="checkpassword">Password:</label>
-    <input id="password" type="password" name="checkpassword"></input>
-  </div>
-  <div>
-    <input type="submit" value="Sign Up"></input>
-    <input type="reset" value="Clear"></input>
-  </div>
-</form>
+</div>
+ 
+    
